<resources>
    <string name="app_name">Dictionary</string>
    <string name="search_field">Введите слово для перевода</string>
    <string name="search_field_null">Необходимо ввести слово</string>
    <string name="translate_title">Перевод</string>
    <string name="translate_note">Заметка перевода</string>
    <string name="transcription_title">Транскрипция</string>
    <string name="search_text_title">Найденное слово</string>
    <string name="no_connect">Нет подключение к интернету</string>
    <string name="find_internet">В интернете</string>
    <string name="find_db">В БД</string>

    <!-- диалоговое окно -->
    <string name="text_info_error_title">О Ш И Б К А</string>
    <string name="button_close">Закрыть</string>
    <string name="button_fined">Найти</string>
    <string name="input_word_title">Поиск слова</string>
    <string name="input_word_message">Введите слово для поиска в БД</string>

    <!-- меню -->
    <string name="menu_favorite">Избранное</string>
    <string name="menu_history">История поиска</string>
</resources>