<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- найденное слово -->
            <TextView
                android:id="@+id/search_text_title_id"
                style="@style/TranslateTitleStyle"
                android:text="@string/search_text_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/search_text_id"
                style="@style/TranslateTextStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_text_title_id" />

            <!-- транскрипция -->
            <TextView
                android:id="@+id/transcription_title_id"
                style="@style/TranslateTitleStyle"
                android:paddingTop="@dimen/padding"
                android:text="@string/transcription_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_text_id" />

            <TextView
                android:id="@+id/transcription_text_id"
                style="@style/TranslateTextStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/transcription_title_id" />

            <!-- перевод слова -->
            <TextView
                android:id="@+id/translate_title_id"
                style="@style/TranslateTitleStyle"
                android:paddingTop="@dimen/padding"
                android:text="@string/translate_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/transcription_text_id" />

            <TextView
                android:id="@+id/translate_text_id"
                style="@style/TranslateTextStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/translate_title_id" />

            <!-- изображение от перевода -->
            <ImageView
                android:id="@+id/image_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/translate_text_id"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>