<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/bottom_app_size">

        <!-- поле для поиска слова -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_field"
            android:layout_margin="@dimen/padding_mini"
            android:padding="@dimen/padding"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- поиск в интернете -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/find_internet_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_internet"
            app:layout_constraintTop_toBottomOf="@id/input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/find_db_id"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <!-- поиск в БД -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/find_db_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_db"
            android:layout_marginStart="@dimen/padding_mini"
            app:layout_constraintTop_toBottomOf="@id/input_layout"
            app:layout_constraintStart_toEndOf="@id/find_internet_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <!-- список найденных переводов -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:scrollbars="vertical"
            android:layout_marginTop="@dimen/padding"
            android:visibility="gone"
            tools:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/find_internet_id"
            app:layout_constraintBottom_toBottomOf="parent">
        </androidx.recyclerview.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/find_internet_id"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_menu_search_fragment"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>